cleanup, tests
